[package]
name = "tiny-redis"
version = "0.1.0"
authors = ["Alohayo <Garfield.bupt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
mini-redis = "0.3"
tokio = { version = "0.3", features = ["full"] }